--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-client-router",
-  "version": "0.8.2",
+  "version": "0.9.0",
   "description": "A typed client router",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,12 +10,14 @@
     "query-string": "^8.1.0"
   },
   "devDependencies": {
+    "happy-dom": "^20.0.11",
     "tsup": "^7.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^4.0.14"
   },
   "scripts": {
     "build": "tsup src/index.ts --dts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
